# work-tracker

./: .env.example  .gitignore  README.md  check_memories.py  llm.py  n8n-assistant.service  personal-assistant.service  pyproject.toml  requirements.txt  start.sh  test_config.py  test_memory_system.py  test_webhook.py  verify_db.py
app/: config.py  main.py
app/core/: scheduler.py
app/db/: __init__.py  connection.py  init_db.py  models.py
app/services/: conversation.py  db_service.py  email.py  github.py  google_calendar.py  google_docs.py  google_sheets.py  google_workspace.py  llm.py  local_storage.py  memory.py  pending_actions.py  schemas.py  summaries.py  telegram.py  tools_registry.py
app/tasks/: daily_summary.py  evening_summary.py
scripts/: deploy_service.sh  init_workspace.py  setup_db.sh  setup_sheets.py  test_sheets_api.py  trigger_checkin.py  trigger_summary.py
tests/: e2e_test.py  test_bot_logic.py  test_config.py  test_database.py  test_email.py  test_google_docs.py  test_html_generation.py  test_llm.py  test_reminder_integration.py  test_webhook.py  verify_basic_db.py  verify_personal_features.py
